<resources>
    <string name="app_name">StarPedia</string>
    <string name="filter_films_activity">filter_fims</string>
    <string name="filter_starship_activity">filter_starship</string>
    <string name="filter_vehicle_activity">filter_vehicle</string>
    <string name="filter_species_activity">filter_species</string>
    <string name="filter_planet_activity">filter_starsthip</string>
    <string name="filter_people_activity">filter_people</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="cost_in_credit">Cost in Credit</string>
    <string name="length">Length</string>
    <string name="max_atmosphering_speed">Max Atmosphering Speed</string>
    <string name="crew">Crew</string>
    <string name="passengers">Passengers</string>
    <string name="cargo_capacity">Cargo Capacity</string>
    <string name="consumables">Consumables</string>
    <string name="hyperdrive_rating">Hyperdrive Rating</string>
    <string name="mglt">MGLT</string>
    <string name="starship_class">Starship Class</string>
    <string name="pilots">Pilots</string>
    <string name="films">Films</string>
    <string name="vehicle_class">Vehicle Class</string>
    <string name="episode">Episode</string>
    <string name="release_date">Release Date</string>
    <string name="character">Character</string>
    <string name="planets">Planets</string>
    <string name="starships">Starships</string>
    <string name="designation">Designation</string>
    <string name="average_height">Average Height</string>
    <string name="average_lifespan">Average Lifespan</string>
    <string name="homeworld">Homeworld</string>
    <string name="people">People</string>
    <string name="hair_color">Hair color</string>
    <string name="skin_color">Skin color</string>
    <string name="eye_color">Eye color</string>
    <string name="birth_year">Birth year</string>
    <string name="gender">Gender</string>
    <string name="species">Species</string>
    <string name="vehicles">Vehicles</string>
    <string name="_8dp">8dp</string>
    <string name="rotation_period">Rotation Period</string>
    <string name="orbital_period">Orbital Period</string>
    <string name="diameter">Diameter</string>
    <string name="climate">Climate</string>
    <string name="gravity">Gravity</string>
    <string name="terrain">Terrain</string>
    <string name="surface_water">Surface Water</string>
    <string name="population">Population</string>
    <string name="residents">Residents</string>
    <string name="directed_by">Directed by :</string>
    <string name="produced_by">Produced by :</string>
    <string name="pages">Page %1$d</string>
    <string name="ask_back">Ada kesalahan; Ingin kembali?</string>
    <string name="back_yes">YA</string>
</resources>
