<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_planet_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/rotation_period" />

            <TextView
                android:id="@+id/tv_rotation_planet"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/orbital_period" />

            <TextView
                android:id="@+id/tv_orbital_planet"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/diameter" />

            <TextView
                android:id="@+id/tv_diameter_planet"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/climate" />

            <TextView
                android:id="@+id/tv_climate_planet"
                style="@style/DetailInfo" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/gravity" />

            <TextView
                android:id="@+id/tv_gravity_planet"
                style="@style/DetailInfo" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/terrain" />

            <TextView
                android:id="@+id/tv_terrain_planet"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/surface_water" />

            <TextView
                android:id="@+id/tv_surface_water_planet"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/population" />

            <TextView
                android:id="@+id/tv_population_planet"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/residents" />

            <TextView
                android:id="@+id/tv_resident_planet"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/films" />

            <TextView
                android:id="@+id/tv_films_planet"
                style="@style/DetailInfo" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>