<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_people_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/hair_color" />

            <TextView
                android:id="@+id/tv_hair_color_people"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/skin_color" />

            <TextView
                android:id="@+id/tv_skin_color_people"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/eye_color" />

            <TextView
                android:id="@+id/tv_eye_color_people"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/birth_year" />

            <TextView
                android:id="@+id/tv_birth_year_people"
                style="@style/DetailInfo" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/tv_gender_people"
                style="@style/DetailInfo" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/homeworld" />

            <TextView
                android:id="@+id/tv_homeworld_people"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/films" />

            <TextView
                android:id="@+id/tv_films_people"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/species" />

            <TextView
                android:id="@+id/tv_species_people"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/vehicles" />

            <TextView
                android:id="@+id/tv_vehicles_people"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/starships" />

            <TextView
                android:id="@+id/tv_starship_people"
                style="@style/DetailInfo" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>