<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_vehicle_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_model_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_manufacturer_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/cost_in_credit" />

            <TextView
                android:id="@+id/tv_cost_in_credit_vehicle"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/length" />

            <TextView
                android:id="@+id/tv_length_vehicle"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/max_atmosphering_speed" />

            <TextView
                android:id="@+id/tv_max_atmosphere_vehicle"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/crew" />

            <TextView
                android:id="@+id/tv_crew_vehicle"
                style="@style/DetailInfo" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/passengers" />

            <TextView
                android:id="@+id/tv_passengers_vehicle"
                style="@style/DetailInfo" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/cargo_capacity" />

            <TextView
                android:id="@+id/tv_cargo_capacity_vehicle"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/consumables" />

            <TextView
                android:id="@+id/tv_consumables_vehicle"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/vehicle_class" />

            <TextView
                android:id="@+id/tv_vehicle_class"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/pilots" />

            <TextView
                android:id="@+id/tv_pilots_vehicle"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/films" />

            <TextView
                android:id="@+id/tv_films_vehicle"
                style="@style/DetailInfo" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>