<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_species_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_specs_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="Hair color" />

            <TextView
                android:id="@+id/tv_hair_color_species"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="Skin color" />

            <TextView
                android:id="@+id/tv_skin_color_species"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="Eye color" />

            <TextView
                android:id="@+id/tv_eye_color_species"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/designation" />

            <TextView
                android:id="@+id/tv_designation_species"
                style="@style/DetailInfo" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/average_height" />

            <TextView
                android:id="@+id/tv_avg_height_species"
                style="@style/DetailInfo" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/average_lifespan" />

            <TextView
                android:id="@+id/tv_avg_lifespan_species"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/homeworld" />

            <TextView
                android:id="@+id/tv_homeworld_species"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/people" />

            <TextView
                android:id="@+id/tv_people_species"
                style="@style/DetailInfo" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailInfo.Title"
                android:text="@string/films" />

            <TextView
                android:id="@+id/tv_films_species"
                style="@style/DetailInfo" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>